--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - "8000:8000"
     volumes:
       - ./app:/app
+      - dev-static-data:/vol/web
     command: >
       sh -c "python manage.py wait_for_db &&
              python manage.py migrate &&
@@ -23,7 +24,7 @@ services:
       - db
 
 
-  
+
   db:
     image: postgres:13-alpine
     volumes:
@@ -37,3 +38,4 @@ services:
 
 volumes:
   dev-db-data:
+  dev-static-data:
